<resources>
    <string name="app_name">Your first app</string>
    <string name="action_settings">Settings</string>
    <string name="business_name">BMW Gym</string>
    <string name="business_description">BMW Fitness began as World Gym in 1979 and has always been a favorite of different types of athletes and fitness enthusiasts. Refined and updated to offer a setting that is open and light where both staff and clientele are friendly and casual and the focus is on well-balanced health.

    In a pleasant and inviting, 8000 sq. foot facility, we provide an atmosphere that is positive and relaxed - with very reasonable rates. We keep our focus on the individual attention to a few clients interested in a balanced, healthy lifestyle, not thousands of members.</string>
    <string name="business_contact">Contact:</string>
    <string name="business_contact_info">(+91)8860324816</string>
</resources>
