<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sahil.yourfirstapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:src="@drawable/gym"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:text="@string/business_name"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_with_padding"
        android:textColor="@color/colorAccent"
        android:textAppearance="?android:textAppearanceMedium"
        android:padding="@dimen/padding"
        android:text="@string/business_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin_with_padding"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/business_contact"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"
            android:text="@string/business_contact_info"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>

 </LinearLayout>
</ScrollView>